# Rag-Copilot

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
db/: chroma.sqlite3
static/: widget.css  widget.js
templates/: index.html  widget.html
