[tool.poetry]
name = "embedding-with-rag"
version = "0.1.0"
description = "Rag (Retrieval Augmented Generation) Python solution with Gemini, LangChain, and ChromaDB in a Flask API-based solution"
authors = ["Your Name <you@example.com>"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
flask = "^3.0.3"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
langchain-google-genai = "^0.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
